# Tensoft-G21

./: .dockerignore  .gitignore  .gitmodules  LICENSE  README.md  clear_fonts.sh  prepare_simulation.sh  recompile_simulator.sh
previous_experiments/: .gitignore  CMakeLists.txt  README.md
previous_experiments/GA_DATA/: Caterpillar_SGA.csv  body-brain-starfish.csv  brain-simple-starfish.csv  brain-starfish-SGA.csv  brain-starfish-ss.csv  caterpillar_steadystate.csv  escape3.csv  lowstiff_caterpillar_SS.csv  star-fish-steadystate.csv  starfish-constrain.csv
previous_experiments/GA_DATA/passive_0.5S0.5PT/: 101_07022018_183219.csv  104_07022018_183219.csv  107_07022018_183220.csv  109_07022018_183220.csv  110_07022018_183220.csv  111_07022018_183220.csv  112_07022018_183220.csv  115_07022018_183220.csv  117_07022018_183220.csv  119_07022018_183220.csv  121_07022018_183220.csv  122_07022018_183220.csv  124_07022018_183221.csv  127_07022018_183221.csv  128_07022018_183221.csv  129_07022018_183221.csv  130_07022018_183221.csv  132_07022018_183221.csv  134_07022018_183221.csv  136_07022018_183221.csv  137_07022018_183221.csv  138_07022018_183221.csv  60_07022018_183217.csv  61_07022018_183217.csv  62_07022018_183217.csv  69_07022018_183217.csv  73_07022018_183217.csv  74_07022018_183218.csv  75_07022018_183218.csv  76_07022018_183218.csv  77_07022018_183218.csv  78_07022018_183218.csv  81_07022018_183218.csv  82_07022018_183218.csv  84_07022018_183218.csv  86_07022018_183218.csv  88_07022018_183218.csv  89_07022018_183218.csv  92_07022018_183219.csv  95_07022018_183219.csv  (+2 more)
previous_experiments/GA_DATA/passive_1S1PT/: _07022018_180153.csv  _07022018_180154.csv  _07022018_180202.csv  _07022018_180204.csv  _07022018_180205.csv  _07022018_180206.csv  _07022018_180207.csv  _07022018_180211.csv  _07022018_180215.csv  _07022018_180216.csv  _07022018_180219.csv  _07022018_180226.csv  _07022018_180228.csv  _07022018_180229.csv  _07022018_180235.csv  _07022018_180236.csv  _07022018_180241.csv  _07022018_180244.csv  _07022018_180246.csv  _07022018_180247.csv  _07022018_180250.csv  _07022018_180259.csv  _07022018_180301.csv  _07022018_180302.csv  _07022018_180303.csv  _07022018_180304.csv  _07022018_180307.csv  _07022018_180309.csv  _07022018_180311.csv  _07022018_180312.csv  _07022018_180313.csv
previous_experiments/GA_DATA/passive_2S2PT/: 21_07022018_205209.csv  22_07022018_205209.csv  24_07022018_205209.csv  27_07022018_205210.csv  28_07022018_205210.csv  33_07022018_205210.csv  35_07022018_205210.csv  36_07022018_205210.csv  38_07022018_205210.csv  40_07022018_205210.csv  44_07022018_205211.csv  45_07022018_205211.csv  47_07022018_205211.csv  48_07022018_205211.csv  49_07022018_205211.csv  51_07022018_205211.csv  53_07022018_205211.csv  60_07022018_205211.csv  62_07022018_205212.csv  63_07022018_205212.csv  67_07022018_205212.csv  68_07022018_205212.csv  69_07022018_205212.csv  73_07022018_205212.csv  74_07022018_205212.csv  77_07022018_205213.csv  79_07022018_205213.csv  80_07022018_205213.csv  81_07022018_205213.csv  82_07022018_205213.csv  83_07022018_205213.csv  85_07022018_205213.csv  86_07022018_205213.csv  87_07022018_205213.csv  91_07022018_205213.csv  92_07022018_205213.csv  94_07022018_205214.csv  95_07022018_205214.csv  98_07022018_205214.csv  99_07022018_205214.csv
previous_experiments/GA_DATA/species_tables/: SS_star_species.csv1  linear_species.csv  species_star_constrained.csv
previous_experiments/geneticAlgs/: AppGeneticAlg.cpp  AppGeneticAlg2.cpp  AppGeneticAlg3.cpp  CMakeLists.txt
previous_experiments/libGA/: CMakeLists.txt
previous_experiments/libGA/src/: CMakeLists.txt
previous_experiments/movingBall_sim/: AppMovingBall_sim.cpp  CMakeLists.txt  MovingBallModel_sim.cpp  MovingBallModel_sim.h  MovingBallSineWaves_sim.cpp  MovingBallSineWaves_sim.h  input_sim.txt  output_sim.txt
previous_experiments/structureStudy/: CMakeLists.txt
previous_experiments/structureStudy/Icosahedron/: CMakeLists.txt  data1.csv
previous_experiments/structureStudy/Icosahedron/MovingBall_active/: AppMovingBall_active.cpp  CMakeLists.txt  MovingBallModel_active.cpp  MovingBallModel_active.h  MovingBallSineWaves_active.cpp  input_active.txt
previous_experiments/structureStudy/Icosahedron/MovingBall_passive/: AppMovingBall_passive.cpp  CMakeLists.txt  MovingBallModel_passive.cpp  MovingBallModel_passive.h  MovingBallSineWaves_passive.cpp  (+3 more)
previous_experiments/structureStudy/prism/: CMakeLists.txt  data_0-2.csv  data_0-4.csv  data_0-6.csv  data_0-8.csv  data_all.csv  data_soft.csv  doubleStruct_rigid.csv  doubleStruct_rigid_fitted.csv  doubleStruct_soft.csv  doubleStruct_soft_fitted.csv  singleStruct_rigid.csv  singleStruct_rigid_fitted.csv  singleStruct_soft.csv
simulation/: .gitignore  CMakeLists.txt  compute_coms.sh  neuralNet.cpp  neuralNet.h  neuralNetGR.cpp  neuralNetGR.h  obstacleModel.cpp  obstacleModel.h  perform_measurements.sh  robotCOM.cpp  robotController.cpp  robotController.h  robotControllerGR.cpp  robotControllerGR.h  robotControllerSGR.cpp  robotControllerSGR.h  robotDirection.cpp  robotMeasurements.cpp  robotModel.cpp  robotModel.h  robotRotationAngle.cpp  robotSimulation.cpp  robotSimulationGR.cpp  robotSimulationSGR.cpp  robotStatic.cpp  robotTrajectory.cpp  robotVisualization.cpp  robotVisualizationGR.cpp  robotVisualizationSGR.cpp  targetModel.cpp  targetModel.h
simulation/measurements_scripts/: README.md  cable_len_estimation.py  compute_bests_fitness_dist.py  evolve_mod_conf.py  measure_coms.py  plot_cmd2com_comp.py  plot_cmd_comp.py  plot_nn_commands.py  verify_fitness.py  vie_measure.py
simulation/nn_weights/: README.md  weights_keras_model2_old  weights_keras_model3_old  weights_keras_model5
simulation/test_inputs/: robot_0_seed_213_sim_0.txt  robot_1_seed_213_sim_0.txt  robot_1_seed_213_sim_0_nn.txt  robot_4_1_seed_213_sim_0.txt  single.txt  test.txt
simulation/test_inputs/stiff_single/: single_0.1.txt  single_0.2.txt  single_0.3.txt  single_0.4.txt  single_0.5.txt  single_0.6.txt  single_0.7.txt  single_0.8.txt  single_0.9.txt  single_1.txt
(+3403 files in other folders)
