add_library(${PROJECT_NAME}
    GA1DArrayGenome.c
    GA1DBinStrGenome.c
    GA2DArrayGenome.c
    GA2DBinStrGenome.c
    GA3DArrayGenome.c
    GA3DBinStrGenome.c
    GAAllele.c
    GABaseGA.c
    GABin2DecGenome.c
    GABinStr.c
    GADCrowdingGA.c
    GADemeGA.c
    GAGenome.c
    GAIncGA.c
    GAList.c
    GAListBASE.c
    GAListGenome.c
    GAParameter.c
    GAPopulation.c
    GARealGenome.c
    GASStateGA.c
    GAScaling.c
    GASelector.c
    GASimpleGA.c
    GAStatistics.c
    GAStringGenome.c
    GATree.c
    GATreeBASE.c
    GATreeGenome.c
    gabincvt.c
    gaerror.c
    garandom.c
)
target_include_directories(${PROJECT_NAME} PUBLIC
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
)
# target_link_libraries(${PROJECT_NAME} PRIVATE ntrt::core)